homepage update includes welcome message

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,5 +30,5 @@
 # available at https://guides.rubyonrails.org/i18n.html.
 
 en:
-  hello: "Hello world"
   name: "Cole Shaffer"
+  welcome_message: "Hello, this is my site"
